Bug 107548 - menu icons always use ImageBigURL
Summary: menu icons always use ImageBigURL
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.3.2.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-01 17:34 UTC by Oliver Brinzing
Modified: 2020-08-30 19:34 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
icons lo aoo compare (57.99 KB, application/vnd.oasis.opendocument.text)
2017-05-01 17:34 UTC, Oliver Brinzing
Details
icon_test_lo.oxt (9.80 KB, application/vnd.openofficeorg.extension)
2017-05-01 17:34 UTC, Oliver Brinzing
Details
icon_test_aoo.oxt (9.84 KB, application/vnd.openofficeorg.extension)
2017-05-01 17:35 UTC, Oliver Brinzing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Brinzing 2017-05-01 17:34:23 UTC
Created attachment 132990 [details]
icons lo aoo compare

steps to reproduce:

- install attached "icon_test_lo.oxt" or
  open attached "icons_lo_aoo.odt".
  for verification with aoo use: "icon_test_aoo.oxt"

-> the lo menu icon looks strange, missing upper and left margin.
   it seems, lo menu icons always use "ImageBigURL" _26p, while 
   aoo uses "ImageSmallURL" _16p for menu instead.

checked with
Version: 5.3.2.2
Build-ID: 6cd4f1ef626f15116896b1d8e1398b56da0d0ee1
CPU-Threads: 4; BS-Version: Windows 6.2; UI-Render: GL; Layout-Engine: neu; 
Gebietsschema: de-DE (de_DE); Calc: single

Version: 5.4.0.0.alpha1+
Build ID: 820dff991b119b2cafb5efe5f1a4668351705457
CPU threads: 4; OS: Windows 6.19; UI render: default; 
Locale: de-DE (de_DE); Calc: group
Comment 1 Oliver Brinzing 2017-05-01 17:34:48 UTC
Created attachment 132991 [details]
icon_test_lo.oxt
Comment 2 Oliver Brinzing 2017-05-01 17:35:24 UTC
Created attachment 132992 [details]
icon_test_aoo.oxt
Comment 3 Oliver Brinzing 2017-05-02 17:29:29 UTC
just noticed, *disabling* OpenGL seems to solve the problem
Comment 4 Buovjaga 2017-05-06 13:04:56 UTC
Telesto: OpenGL works for you, right? Could you test this?
Comment 5 Oliver Brinzing 2017-05-06 13:55:09 UTC
> OpenGL works for you, right?
i have to use "[x] Ignore OpenGL blacklist" to make OpenGL work
on my notebooks. they all have onboard intel graphic.
as mentioned before, everything is fine, if i do not use OpenGL.
Comment 6 Telesto 2017-05-06 15:27:25 UTC
Confirming with
Version: 5.4.0.0.alpha1+
Build ID: 6d424f07701bf26d8fb173563b567d5f097c33e2
CPU threads: 4; OS: Windows 6.2; UI render: GL; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-05-03_00:01:56
Locale: pap-CW (nl_NL); Calc: CL

and with
Versie: 4.4.6.3 
Build ID: e8938fd3328e95dcf59dd64e7facd2c7d67c704d
Locale: nl_NL

Note: I also have to use "[x] Ignore OpenGL blacklist"
Note 2: only icon of the extension seems to be affected
Comment 7 QA Administrators 2018-06-17 02:43:46 UTC Comment hidden (obsolete)
Comment 8 Oliver Brinzing 2018-08-24 16:23:06 UTC
i can confirm the problem with lo 6.1 as mentioned above
Comment 9 V Stuart Foote 2019-03-31 15:40:00 UTC
On Windows 10 Home 64-bit (1809) en-US with Intel HD Graphics 620 and
Version: 6.2.2.2 (x64)
Build ID: 2b840030fec2aae0fd2658d8d4f9548af4e3518d
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

The PNG icons of the extension are being mishandled--incorrectly scalled/clipped--when rendered to the extensions Toolbar or Menu when OpenGL rendering is enabled.

No issue when OpenGL rendering is not used.

But, not clear LibreOffice is ever using the 16x16 px icon--seems we are always (Default or OpenGL rendering) using the 26x26 px icon which has different assignment of alpha channel. It is just being scaled differently between default and OpenGL rendering paths.
Comment 10 Luboš Luňák 2019-04-16 11:50:25 UTC
The OpenGL scaling problem got fixed as part of bug#105277.

I'm keeping this as the ImageBigURL problem only.
Comment 11 Commit Notification 2020-08-19 22:20:27 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c87da6596334866499e1aff3959abc025d05f75f

tdf#107548 Use ImageSmallURL for small icons

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2020-08-30 19:34:29 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/15d655f0133d986a85f4ba9630587566d90a0c50

Related: tdf#107548 Make sure embedded images have higher priority

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.