tdf#107548 Use ImageSmallURL for small icons

Started as a copy-paste error introduced in commit
a2f4aed32257e183339a3513339bc59009c88527 ("fdo#66524 - defer
loading and scaling AddOns images until necessary."), which
was removed later in 9a65df25138750915f9c6e1e1fa09988a2d11434
("coverity#1078526 Logically dead code").

Also, the high contrast properties are no longer supported,
but they still read and were overwriting the big image property.

Change-Id: I005bf5873fe821896c143d8fb513b2f73f05bba1